# SDL2-Minesweeper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmd  config.cmd  config.sh  run.cmd  run.sh
SDL2-Minesweeper/: CMakeLists.txt  Main.cpp
SDL2-Minesweeper/headers/: CMakeLists.txt  CRTMemoryLeak.h  Event.h  EventHandler.h  EventManager.h  GameManager.h  IEvent.h  ISubscriber.h  ImGuiComplexComponent.h  ImGuiHandler.h  ImGuiHandlerImp.h  ImGuiHandlerImpSDL.h  ImGuiMinesweeperBuilder.h  ImGuiSimpleComponent.h  InputHandler.h  LevelHandler.h  Mode.h  SDLHandler.h  Screen.h  StringExtension.h  Subscriber.h  TextureHandler.h
SDL2-Minesweeper/headers/bridge/: GameManagerImp.h  ImGuiHandlerImp.h  ImGuiHandlerImpSDL.h  InputHandlerImp.h  InputHandlerImpSDL.h  LevelHandlerImp.h  LevelHandlerImpSDL.h
SDL2-Minesweeper/headers/builder/: IBuilder.h  ImGuiBuilder.h  ImGuiMinesweeperBuilder.h  LevelBuilder.h  LevelMinesweeperBuilder.h
SDL2-Minesweeper/headers/composite/: ImGuiComplexComponent.h  ImGuiComponent.h  ImGuiSimpleComponent.h  Rect.h
SDL2-Minesweeper/headers/composite/components/: Button.h  ButtonImage.h  Canvas.h  Entry.h  Frame.h  Image.h  Style.h  Tab.h  Text.h  Viewport.h  Window.h
SDL2-Minesweeper/headers/game/: GameManagerImp.h  Level.h  LevelHandler.h  Mode.h  Screen.h  Tile.h  Tilebitmask.h
SDL2-Minesweeper/headers/imgui/: ImGuiComponent.h  TopMenuBar.h  TopMenuBarImp.h
SDL2-Minesweeper/src/: CMakeLists.txt  Event.cpp  EventHandler.cpp  EventManager.cpp  GameManager.cpp  ImGuiComplexComponent.cpp  ImGuiHandler.cpp  ImGuiSimpleComponent.cpp  InputHandler.cpp  SDLHandler.cpp  Subscriber.cpp  TextureHandler.cpp
SDL2-Minesweeper/src/builder/: ImGuiMinesweeperBuilder.cpp
SDL2-Minesweeper/src/composite/: ImGuiComplexComponent.cpp  ImGuiComponent.cpp  ImGuiSimpleComponent.cpp
SDL2-Minesweeper/src/composite/components/: Button.cpp  ButtonImage.cpp  Canvas.cpp  Frame.cpp  Image.cpp  Rect.cpp  Style.cpp  Tab.cpp  Viewport.cpp  Window.cpp
SDL2-Minesweeper/src/game/: GameManagerImp.cpp  Level.cpp  LevelHandler.cpp  Screen.cpp  Tile.cpp
SDL2-Minesweeper/src/imgui/: TopMenuBar.cpp  TopMenuBarImp.cpp
